@@ -1,5 +1,7 @@
 require 'test_helper'
 
+SimpleCov.command_name "test:units"
+
 class UserTest < ActiveSupport::TestCase
   # Replace this with your real tests.
   test "the truth" do
