@@ -18,6 +18,9 @@
 
 == 1.4.0
 
+* Testing
+  * Analyzing test coverage using SimpleCov gem
+
 == 1.3.0
 
 * Enhancements
